# cp-web-

./: .gitignore  docker-compose.yml  package.json
backend/: BackgroundWorker.h  CFApiClient.h  CMakeLists.txt  CodeExplorerController.cc  CodeExplorerController.h  CodeScraper.h  CohortAnalyzer.h  FrictionAnalyzer.h  GhostArenaController.cc  GhostArenaController.h  MonteCarloSimulator.h  NightlyCron.h  RateLimiter.h  SprintController.cc  SprintController.h  TelemetryController.cc  TelemetryController.h  TiltTracker.h  config.json  main.cpp
frontend/: local-scraper.cjs  package-lock.json  package.json
frontend/src/: App.jsx  Heatmap3D.jsx  SkillTree3D.jsx  cfAnalytics.js  index.css  main.jsx  spacedRep.js
node_backend/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
